--- a/css/fa.css
+++ b/css/fa.css
@@ -18,7 +18,7 @@ h1 {
 
 button {
   color: white;
-  background-color: #56ccf2;
+  background-color: rgba(86, 204, 242, 0.75);
   border: 0;
   border-radius: 0.3em;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25),
@@ -31,7 +31,7 @@ button {
 }
 
 button:hover {
-  background-color: hsl(195, 73%, 41%);
+  background-color: hsl(195, 59%, 59%);
 }
 
 .btn {
